force-app/main/default/objects/TelemetrySignal__e/TelemetrySignal__e.object-meta.xml
<CustomObject>
    <label>Telemetry Signal</label>
    <pluralLabel>Telemetry Signals</pluralLabel>
</CustomObject>