force-app/main/default/objects/TelemetrySignal__e/fields/FaultCount30d__c.field-meta.xml
<CustomField>
    <fullName>FaultCount30d__c</fullName>
    <description>Count of Fault-type telemetry events in the last 30 days for the VIN.</description>
    <label>Fault Count (30d)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>