force-app/main/default/objects/TelemetrySignal__e/fields/LastEventDate__c.field-meta.xml
<CustomField>
    <fullName>LastEventDate__c</fullName>
    <description>Timestamp of the most recent telemetry event for the VIN in the 30-day window.</description>
    <label>Last Event Date</label>
    <type>DateTime</type>
</CustomField>