force-app/main/default/objects/TelemetrySignal__e/fields/OffNetworkCharges30d__c.field-meta.xml
<CustomField>
    <fullName>OffNetworkCharges30d__c</fullName>
    <description>Count of charge events at non-Electra-network locations in the last 30 days.</description>
    <label>Off-Network Charges (30d)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>