force-app/main/default/objects/TelemetrySignal__e/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>17-character VIN carried on the event; used to resolve the matching Vehicle + Claim.</description>
    <label>VIN</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
</CustomField>